# crdt-ocaml

./: .build-error-hints.txt  .gitignore  .ocamlinit-template  Makefile  README.org  dune-project  ocaml_crdt.opam  ocaml_crdt.opam.template  schema.capnp
_build/: log
dev/: dune  scratch.ml
lib/: anti_entropy.ml  dune  gossip.ml  gossip_capnp.ml  hlc.ml  hulc.ml  item.ml  node_id.ml  server_h2.ml  sqlite.ml  world.ml
lib/capnp/: client.ml  server.ml
lib/schema/: dune
test/: dune  test_ocaml_crdt_hlc.ml
